syntax = "proto3";

package Protocol;

// import "google/protobuf/timestamp.proto";
option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId {
  C_ENTER = 0;
  S_ENTER = 1;
  S_SPAWN = 2;
  C_LEAVE = 3;
  S_LEAVE = 4;
  S_DESPAWN = 5;
  C_MOVE = 6;
  S_MOVE = 7;
  C_ANIMATION = 8;
  S_ANIMATION = 9;
  C_CHANGE_COSTUME = 10;
  S_CHANGE_COSTUME = 11;
  C_CHAT = 12;
  S_CHAT = 13;
  C_ENTER_DUNGEON = 14;
  C_PLAYER_RESPONSE = 15;
  S_ENTER_DUNGEON = 16;
  S_LEAVE_DUNGEON = 17;
  S_SCREEN_TEXT = 18;
  S_SCREEN_DONE = 19;
  S_BATTLE_LOG = 20;
  S_SET_PLAYER_HP = 21;
  S_SET_PLAYER_MP = 22;
  S_SET_MONSTER_HP = 23;
  S_PLAYER_ACTION = 24;
  S_MONSTER_ACTION = 25;
}

message C_Enter {
  string nickname = 1;
  int32 class = 2;
}

message S_Enter {
  PlayerInfo player = 1;
}

message S_Spawn {
  repeated PlayerInfo players = 1;
}

message C_Leave {}

message S_Leave {}

message S_Despawn {
  repeated int32 playerIds = 1;
}

message C_Move {
  TransformInfo transform = 1;
}

message S_Move {
  int32 playerId = 1;
  TransformInfo transform = 2;
}

message C_Animation {
  int32 animCode = 1;
}

message S_Animation {
  int32 playerId = 1;
  int32 animCode = 2;
}

message C_ChangeCostume {
  CostumeInfo costume = 1;
}

message S_ChangeCostume {
  int32 playerId = 1;
  CostumeInfo costume = 2;
}

message S_Chat {
  int32 playerId = 1;
  string chatMsg = 2;
}

message C_Chat {
  int32 playerId = 1;
  string senderName = 2;
  string chatMsg = 3;
}

message C_EnterDungeon {
  int32 dungeonCode = 1;
}

message C_PlayerResponse {
  int32 responseCode = 1;
}

message S_EnterDungeon {
  DungeonInfo dungeonInfo = 1;
  PlayerStatus player = 2;
  optional ScreenText screenText = 3;
  optional BattleLog battleLog = 4;
}

message S_LeaveDungeon {}

message S_ScreenText {
  ScreenText screenText = 1;
}

message S_ScreenDone {}

message S_BattleLog {
  BattleLog battleLog = 1;
}

message S_SetPlayerHp {
  float hp = 1;
}

message S_SetPlayerMp {
  float mp = 1;
}

message S_SetMonsterHp {
  int32 monsterIdx = 1;
  float hp = 2;
}

message S_PlayerAction {
  int32 targetMonsterIdx = 1;
  ActionSet actionSet = 2;
}

message S_MonsterAction {
  int32 actionMonsterIdx = 1;
  ActionSet actionSet = 2;
}

message C_ViewRankPoint {

}

message S_ViewRankPoint {
  Rank myRank = 1;
  repeated Rank otherRanks = 2;
}

message S_PlayerStrikeFirstNotification {
  bool check = 1;
}

message S_PlayerCurrencyNotification {
  CurrencyInfo currencyInfo = 1;
}

message C_PlayerMatch {

}

message S_PlayerMatch {
  bool check = 1;
}

message S_PlayerMatchNotification {
  PlayerStatus playerData = 1;
  PlayerStatus opponentData = 2;
}

message S_UserTurn {
  bool userTurn = 1;
}

message S_EnemyActionNotification {
  ActionSet actionSet = 1;
}

message S_GameOverNotification {
  bool isWin = 1;
}

message S_EnemyHpNotification {
  int32 hp = 1;
}

message PlayerInfo {
  int32 playerId = 1;
  string nickname = 2;
  int32 class = 3;
  TransformInfo transform = 4;
  StatInfo statInfo = 5;
}

message TransformInfo {
  float posX = 1;
  float posY = 2;
  float posZ = 3;
  float rot = 4;
}

message StatInfo {
  int32 level = 1;
  float hp = 2;
  float maxHp = 3;
  float mp = 4;
  float maxMp = 5;
  float atk = 6;
  float def = 7;
  float magic = 8;
  float speed = 9;
  CostumeInfo costume = 10;
}

message CostumeInfo {
  repeated int32 costume = 1;
}

message ScreenText {
  string msg = 1;
  bool typingAnimation = 2;
  optional ScreenTextAlignment alignment = 3;
  optional Color textColor = 4;
  optional Color screenColor = 5;
}

message ScreenTextAlignment {
  int32 x = 1;
  int32 y = 2;
}

message Color {
  int32 r = 1;
  int32 g = 2;
  int32 b = 3;
}

message DungeonInfo {
  int32 dungeonCode = 1;
  repeated MonsterStatus monsters = 2;
}

message MonsterStatus {
  int32 monsterIdx = 1;
  int32 monsterModel = 2;
  string monsterName = 3;
  float monsterHp = 4;
}

message ActionSet {
  int32 animCode = 1;
  int32 effectCode = 2;
}

message PlayerStatus {
  int32 playerClass = 1;
  int32 playerLevel = 2;
  string playerName = 3;
  float playerFullHp = 4;
  float playerFullMp = 5;
  float playerCurHp = 6;
  float playerCurMp = 7;
}

message BattleLog {
  string msg = 1;
  bool typingAnimation = 2;
  repeated BtnInfo btns = 3;
}

message BtnInfo {
  string msg = 1;
  bool enable = 2;
}

message Rank {
  string playerName = 1;
  int32 playerRank = 2;
  int32 playerScore = 3;
}

message CurrencyInfo {
  int32 gold = 1;
  int32 stone = 2;
}